# ninety-nine

./: .gitignore  README.md  TODO  ninety-nine.cabal  package.yaml  stack.yaml
app/: Main.hs
app/cidr/: Main.hs
app/philosophers/: Main.hs
app/philosophers-stm/: Main.hs
app/philosophers-with-mutex/: Main.hs
app/pretty-pictures/: Main.hs
app/pretty-pictures-ii/: Main.hs
app/pretty-pictures-iii/: Main.hs
src/: Continuations.hs  Ex11to20.hs  Ex21to28.hs  Ex31to41.hs  Ex46to50.hs  Ex54to60.hs  Ex61to69.hs  Ex70to73.hs  Ex80to89.hs  Ex90to94.hs  Ex95to99.hs  Labirinth.hs  Lib.hs  Luhn.hs
src/ApplicativeConst/: MyConst.hs
src/Circular/: Circular.hs  CircularList.hs
src/Comonads/: CellularAutomata.hs  SimpleCellularAutomata.hs  StoreMk.hs
src/Cont/: HowContWork.hs  Lilith.hs  MyCont.hs  TheContMonad.hs
src/Distributions/: Part1.hs
src/FinalTagless/: Original.hs  Original1.hs  Original2.hs  OriginalDeBruijn.hs  OriginalTypecheck.hs  OriginalTypeclass.hs
src/FoldTutorial/: Universality.hs
src/HaskellForAll/: BeautifulFolding.hs  ComposableStreamingFolds.hs  FunctionalMonoid.hs
src/Lens/: HelloLens.hs  LensOverTea.hs  WikiTutorial.hs
src/Manatee/: LazyLambda.hs  MaxSubarray.hs  ReverseState.hs  RevisitingParsing.hs  TheEssenceOfFunctionalProgramming.hs  UnderstandingYoneda.hs  Variance.hs
src/OpenRecursion/: Recursion.hs
src/Polymorphism/: Poly.hs
src/Queenslogic/: MyQueensLogic.hs  Queenslogic.hs
src/Smartconstructors/: Constructors.hs
src/kata/: Kata11SortingItOut.hs  Knapsack.hs
src/lyahftgg/: Dynamic.hs  Zippers.hs  ZippersX.hs  zippers.hs
src/wfpm/: Dynamic.hs  WhyFPMatters.hs
test/: Ex11to20Spec.hs  Ex21to28Spec.hs  Ex31to41Spec.hs  Ex46to50Spec.hs  Ex54to60Spec.hs  Ex61to69Spec.hs  HS99ListsISpec.hs  LuhnSpec.hs  Spec.hs
