name:                ninety-nine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ninety-nine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/kata
  exposed-modules:     Lib
                     , Luhn
                     , Ex11to20
                     , Ex21to28
                     , Ex31to41
                     , Ex46to50
                     , Ex54to60
                     , Continuations
                     , Kata11SortingItOut
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , transformers
                     , ListZipper
                     , random
                     , containers
                     , unordered-containers
                     , monad-loops
                     , pqueue
  default-language:    Haskell2010

executable ninety-nine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ninety-nine
  default-language:    Haskell2010



test-suite ninety-nine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ninety-nine
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       HS99ListsISpec
                     , LuhnSpec
                     , Ex11to20Spec
                     , Ex21to28Spec
                     , Ex31to41Spec
                     , Ex46to50Spec
                     , Ex54to60Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ninety-nine
